# vector-db-labs

./: .gitignore  README.md  pyproject.toml
hn-comment-vector-search/: README.md  docker-compose.yml  pyproject.toml
hn-comment-vector-search/src/: __init__.py  load_data.py  schema.py  search.py
vector_and_graph_db/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
vector_and_graph_db/scripts/: init-es.sh
vector_and_graph_db/src/: __init__.py  config.py  etl.py  repl.py
vector_and_graph_db/src/extractors/: __init__.py
vector_and_graph_db/src/loaders/: __init__.py
vector_and_graph_db/src/models/: __init__.py
vector_and_graph_db/src/processors/: __init__.py
vector_and_graph_db/src/search/: __init__.py
vector_and_graph_db/src/stores/: __init__.py  es_store.py  neo4j_store.py  qdrant_store.py
