[project]
name = "vector-and-graph-db"
version = "0.1.0"
description = "Utilizing Vector and Graph Databases for Advanced Data Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.0.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "neo4j>=5.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]
